@@ -26,6 +26,7 @@ import javax.crypto.SecretKey;
 import javax.crypto.spec.IvParameterSpec;
 import javax.faces.FacesException;
 import java.security.SecureRandom;
+import java.util.Base64;
 import java.util.SortedMap;
 import java.util.logging.Level;
 import java.util.logging.Logger;
@@ -35,7 +36,6 @@ import javax.crypto.NoSuchPaddingException;
 import javax.crypto.spec.SecretKeySpec;
 import javax.naming.InitialContext;
 import javax.naming.NamingException;
-import javax.xml.bind.DatatypeConverter;
 
 /**
  * <p>This utility class is to provide both encryption and
@@ -104,7 +104,7 @@ public final class ByteArrayGuardAESCTR {
             // encrypt the plaintext
             byte[] encdata = encryptCipher.doFinal(bytes);
             // Base64 encode the encrypted bytes
-            securedata = DatatypeConverter.printBase64Binary(encdata);
+            securedata = Base64.getEncoder().encodeToString(encdata);
         } catch (NoSuchAlgorithmException | NoSuchPaddingException | InvalidKeyException | InvalidAlgorithmParameterException | IllegalBlockSizeException | BadPaddingException e) {
             if (LOGGER.isLoggable(Level.SEVERE)) {
                 LOGGER.log(Level.SEVERE,
@@ -119,7 +119,7 @@ public final class ByteArrayGuardAESCTR {
 
     public String decrypt(String value) throws InvalidKeyException {
         
-        byte[] bytes = DatatypeConverter.parseBase64Binary(value);;
+        byte[] bytes = Base64.getDecoder().decode(value);
         
         try {
             Cipher decryptCipher = Cipher.getInstance(CIPHER_CODE);
@@ -146,7 +146,7 @@ public final class ByteArrayGuardAESCTR {
             InitialContext context = new InitialContext();
             String encodedKeyArray = (String) context.lookup("java:comp/env/jsf/FlashSecretKey");
             if (null != encodedKeyArray) {
-                byte[] keyArray = DatatypeConverter.parseBase64Binary(encodedKeyArray);
+                byte[] keyArray = Base64.getDecoder().decode(encodedKeyArray);
                 if (keyArray.length < 16) {
                     throw new FacesException("key must be at least 16 bytes long.");
                 }
